// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoEditor snapshots renders as expected with default behavior 1`] = `
<ErrorContext.Provider
  value="hooks.errorsHook.error"
>
  <EditorContainer
    onClose={[MockFunction props.onClose]}
    returnFunction={null}
    validateEntry={[MockFunction validateEntry]}
  >
    <div
      style={
        Object {
          "left": "50%",
          "position": "absolute",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
        }
      }
    >
      <Spinner
        animation="border"
        className="m-3"
        screenreadertext="loading"
      />
    </div>
  </EditorContainer>
</ErrorContext.Provider>
`;

exports[`VideoEditor snapshots renders as expected with default behavior 2`] = `
<ErrorContext.Provider
  value="hooks.errorsHook.error"
>
  <EditorContainer
    onClose={[MockFunction props.onClose]}
    returnFunction={null}
    validateEntry={[MockFunction validateEntry]}
  >
    <div
      className="video-editor"
    >
      <VideoEditorModal
        isLibrary={false}
      />
    </div>
  </EditorContainer>
</ErrorContext.Provider>
`;
